Added enums for function parameters. Fixed highlighter rules.

--- a/CryptoWorkbench/CryptoWorkbench/CryptoWorkbench.vcxproj
+++ b/CryptoWorkbench/CryptoWorkbench/CryptoWorkbench.vcxproj
@@ -175,6 +175,10 @@
       <Command Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">"$(QTDIR)\bin\rcc.exe" -name "%(Filename)" -no-compress "%(FullPath)" -o .\GeneratedFiles\qrc_%(Filename).cpp</Command>
     </CustomBuild>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="..\data\corelib.js" />
+    <None Include="..\data\help.html" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
